--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Guidepost</string>
+    <string name="latitude_longitude">Latitude / Longitude</string>
+    <string name="orientation">Orientation</string>
+    <string name="start">Start</string>
 </resources>
